[tool.poetry]
name = "caching-proxy"
version = "0.1.0"
description = "CLI tool that starts a caching proxy server, it will forward requests to the actual server and cache the responses."
authors = ["chineduCoded <chinedujohn17@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "." }
]

[tool.poetry.scripts]
caching-proxy = "app.caching_proxy:cli"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
fastapi = {extras = ["standard"], version = "^0.115.4"}
typer = "^0.12.5"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
